--- a/package.json
+++ b/package.json
@@ -8,17 +8,15 @@
   ],
   "scripts": {
     "test": "sh scripts/test.sh",
-
+    "console": "node_modules/.bin/truffle console",
+    "coverage": "sh scripts/coverage.sh",
+    
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "lint:sol": "solium -d .",
     "lint:sol:fix": "solium -d . --fix",
     "lint:all": "npm run lint && npm run lint:sol",
-    "lint:all:fix": "npm run lint:fix && npm run lint:sol:fix",
-
-    "console": "node_modules/.bin/truffle console",
-    "coverage": "sh scripts/coverage.sh",
-    "version": "scripts/version.js"
+    "lint:all:fix": "npm run lint:fix && npm run lint:sol:fix"
   },
 
   "repository": {
