--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
   ],
   "scripts": {
     "test": "sh scripts/test.sh",
+    "test:testnet": "node_modules/.bin/truffle test --network rinkeby",
     "console": "node_modules/.bin/truffle console",
+    "console:testnet": "node_modules/.bin/truffle console --network rinkeby",
+    "migrate": "node_modules/.bin/truffle migrate",
+    "migrate:testnet": "node_modules/.bin/truffle migrate --network rinkeby",
     "coverage": "sh scripts/coverage.sh",
     
     "lint": "eslint .",
