--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "dotenv": "^5.0.1",
     "ethereumjs-util": "^5.2.0",
     "ethjs-abi": "^0.2.1",
-    "truffle-hdwallet-provider": "0.0.5"
+    "truffle-hdwallet-provider": "0.0.5",
+    "truffle-hdwallet-provider-privkey": "0.2.0"
   }
 }
